--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,11 @@
 export(Filter_and_QC)
 import(RColorBrewer)
 import(Seurat)
+import(Sys)
 import(ggplot2)
+import(grid)
 import(gridExtra)
+import(png)
 import(reshape2)
 import(stringr)
 import(svglite)
