--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,7 @@ Imports:
     gridBase (>= 0.4-7),
     gridExtra (>= 2.3),
     RColorBrewer (>= 1.1-3),
-    Seurat (>= 4.1.1)
+    Seurat (>= 4.1.1),
+    png
 Config/testthat/edition: 3
 
