--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Imports:
     httpuv (>= 1.6.5),
     leiden (>= 0.4.2),
     markdown (>= 1.1),
+    methods (>= 4.1.3),
     progressr (>= 0.10.1),
     pryr (>= 0.1.5),
     reshape2 (>= 1.4.4),
