--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,7 @@ Imports:
     reticulate (>= 1.25),
     stringr (>= 1.4.1),
     svglite (>= 2.1.0),
+    tibble (>= 3.1.8),
     tidyverse (>= 1.3.2),
     viridisLite (>= 0.4.0),
     xfun (>= 0.32),
