--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Imports:
     leiden (>= 0.4.2),
     markdown (>= 1.1),
     methods (>= 4.1.3),
+    plotly (>= 4.10.0), 
     progressr (>= 0.10.1),
     pryr (>= 0.1.5),
     reshape2 (>= 1.4.4),
