--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,6 +47,8 @@ Imports:
     gridExtra (>= 2.3),
     RColorBrewer (>= 1.1-3),
     Seurat (>= 4.1.1),
+    gtable (>= 0.3.1),
+    digest (>= 0.6.29),
     png
 Config/testthat/edition: 3
 
