--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,9 +58,16 @@ Imports:
     gridExtra (>= 2.3),
     RColorBrewer (>= 1.1-3),
     Seurat (>= 4.1.1),
+    gtable (>= 0.3.1),
+    digest (>= 0.6.29),
     png,
     httr,
     jsonlite,
-    plyr
+    plyr,
+    colorspace,
+    dendextend,
+    dendsort,
+    pheatmap,
+    scales
 Config/testthat/edition: 3
 
