Adding action files and dockerfiles

--- a/Dockerfiles/Plain_R_container/Building_R_environment/DESCRIPTION
+++ b/Dockerfiles/Plain_R_container/Building_R_environment/DESCRIPTION
@@ -1,19 +1,13 @@
-Package: SCWorkflow
-Title: SCWorkflow from NIDAP
-Version: 0.0.0.1
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: Pakcaging NIDAP templates.
-License: MIT + file LICENSE
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
-Suggests: 
-    testthat (>= 3.0.0)
+Type: project
+Description: Single-cell-RNA-seq-R4.
+Repository:
+    CRAN,
+    biocsoftv314,
+    biocsoftv315,
+    biocanadatav313,
+    biocexpdatav314,
+    biocworkflowv314
 Depends:
-    R (>= 4.0)
-Imports:
     anndata (>= 0.7.5.2),
     callr (>= 3.7.1),
     cowplot (>= 1.1.1),
@@ -73,5 +67,3 @@ Imports:
     gdata,
     ggrepel,
     tidyr
-Config/testthat/edition: 3
-
