--- a/.github/workflows/gitflow-R-action.yml
+++ b/.github/workflows/gitflow-R-action.yml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} now ${{ github.event_name }} to ${{ github.ref_nam
 
 on:
   push:
-    branches: ['*', '!dev', '!main']
+    branches: ['*', '!dev']
     
   pull_request:
     types: ['opened', 'closed']
