Accepted changes to Namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,9 @@ export(degGeneExpressionMarkers)
 export(dotPlotMet)
 export(dualLabeling)
 export(filterSeuratObjectByMetadata)
-export(harmonyBatchcorrect)
+export(harmonyBatchCorrect)
 export(heatmapSC)
+export(heatmapSCso)
 export(moduleScore)
 export(nameClusters)
 export(palantir_api_call)
@@ -33,8 +34,6 @@ import(celldex)
 import(colorspace)
 import(cowplot)
 import(data.table)
-import(dendextend)
-import(dendsort)
 import(dplyr)
 import(edgeR)
 import(gdata)
@@ -51,7 +50,6 @@ import(jsonlite)
 import(limma)
 import(magrittr)
 import(parallel)
-import(pheatmap)
 import(plyr)
 import(png)
 import(purrr)
@@ -68,34 +66,58 @@ import(utils)
 importFrom(Seurat,AddMetaData)
 importFrom(Seurat,DotPlot)
 importFrom(Seurat,Idents)
-<<<<<<< HEAD
-=======
+importFrom(Seurat,RunTSNE)
 importFrom(Seurat,subset)
->>>>>>> 0c70bdb53af3a78eab291d2a22c3c2de78d113c5
+importFrom(colorspace,RGB)
+importFrom(colorspace,diverge_hcl)
+importFrom(colorspace,heat_hcl)
+importFrom(colorspace,hex)
+importFrom(dendextend,rotate)
+importFrom(dendsort,dendsort)
 importFrom(digest,digest)
+importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_fixed)
+importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,scale_color_identity)
 importFrom(ggplot2,scale_y_reverse)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_classic)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(ggplot2,ylim)
+importFrom(grDevices,colorRampPalette)
 importFrom(grid,grid.draw)
 importFrom(gridExtra,arrangeGrob)
+importFrom(htmlwidgets,saveWidget)
+importFrom(magrittr,"%>%")
 importFrom(methods,slotNames)
+importFrom(pheatmap,pheatmap)
 importFrom(plotly,as_widget)
 importFrom(plotly,ggplotly)
 importFrom(plotly,plot_ly)
 importFrom(reshape2,melt)
 importFrom(scales,rescale)
+importFrom(stats,as.hclust)
+importFrom(stats,hclust)
+importFrom(stats,kmeans)
 importFrom(stats,quantile)
+importFrom(stringr,str_replace_all)
+importFrom(stringr,str_sort)
+importFrom(stringr,str_wrap)
 importFrom(svglite,svglite)
 importFrom(tibble,deframe)
 importFrom(tibble,rownames_to_column)
