--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(Post_filter_QC)
 export(SampleNames)
 export(annotateCellTypes)
 export(colorByGene)
-export(colorbyGenes)
+export(colorByMarkerTable)
 export(degGeneExpressionMarkers)
 export(dotPlotMet)
 export(dualLabeling)
@@ -17,12 +17,13 @@ export(filterSeuratObjectByMetadata)
 export(harmonyBatchCorrect)
 export(heatmapSC)
 export(heatmapSCso)
-export(moduleScore)
+export(modScore)
 export(nameClusters)
 export(palantir_api_call)
 export(plotMetadata)
 export(pseudobulkDEG)
 export(reclusterFilteredSeuratObject)
+export(reclusterSeuratObject)
 export(tSNE3D)
 export(tSNE_3D_Coordinates)
 export(violinPlot)
@@ -67,7 +68,6 @@ importFrom(Seurat,AddMetaData)
 importFrom(Seurat,DotPlot)
 importFrom(Seurat,Idents)
 importFrom(Seurat,RunTSNE)
-importFrom(Seurat,subset)
 importFrom(colorspace,RGB)
 importFrom(colorspace,diverge_hcl)
 importFrom(colorspace,heat_hcl)
