Changed pheatmap to ComplexHeatmap::pheatmap

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,6 @@ export(dualLabeling)
 export(filterSeuratObjectByMetadata)
 export(harmonyBatchCorrect)
 export(heatmapSC)
-export(heatmapSCso)
 export(moduleScore)
 export(nameClusters)
 export(palantir_api_call)
@@ -63,6 +62,7 @@ import(svglite)
 import(tidyverse)
 import(tools)
 import(utils)
+importFrom(ComplexHeatmap,pheatmap)
 importFrom(Seurat,AddMetaData)
 importFrom(Seurat,DotPlot)
 importFrom(Seurat,Idents)
@@ -105,7 +105,6 @@ importFrom(gridExtra,arrangeGrob)
 importFrom(htmlwidgets,saveWidget)
 importFrom(magrittr,"%>%")
 importFrom(methods,slotNames)
-importFrom(pheatmap,pheatmap)
 importFrom(plotly,as_widget)
 importFrom(plotly,ggplotly)
 importFrom(plotly,plot_ly)
