Edited snapshot tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(Combine_and_Renormalize_DEV)
 export(Filter_and_QC)
 export(MetadataTable)
 export(PCA_and_Normalization)
-export(Post_filter_QC)
 export(SampleNames)
 export(annotateCellTypes)
 export(colorByGene)
@@ -16,18 +15,14 @@ export(dualLabeling)
 export(filterSeuratObjectByMetadata)
 export(harmonyBatchCorrect)
 export(heatmapSC)
-
-
-
-
 export(modScore)
-
 export(nameClusters)
 export(palantir_api_call)
 export(plotMetadata)
+export(postFilterQC)
 export(pseudobulkDEG)
 export(reclusterFilteredSeuratObject)
-
+export(reclusterSeuratObject)
 export(tSNE3D)
 export(tSNE_3D_Coordinates)
 export(violinPlot)
