Adding auto-generated files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ import(celldex)
 import(colorspace)
 import(cowplot)
 import(data.table)
+import(dplyr)
 import(gdata)
 import(ggplot2)
 import(ggpubr)
