Modify package function load

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(modScore)
 export(nameClusters)
 export(palantir_api_call)
 export(plotMetadata)
+export(processRawData)
 export(reclusterFilteredSeuratObject)
 export(reclusterSeuratObject)
 export(tSNE3D)
@@ -28,6 +29,7 @@ import(celldex)
 import(colorspace)
 import(cowplot)
 import(data.table)
+import(dplyr)
 import(gdata)
 import(ggplot2)
 import(ggpubr)
@@ -40,30 +42,27 @@ import(httr)
 import(jsonlite)
 import(magrittr)
 import(parallel)
-import(png)
 import(quantmod)
 import(reshape2)
 import(rlang)
-import(scDblFinder)
 import(scales)
-import(stringr)
-import(svglite)
 import(tidyverse)
 import(tools)
 import(utils)
 importFrom(ComplexHeatmap,pheatmap)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(Seurat,AddMetaData)
 importFrom(Seurat,CreateAssayObject)
 importFrom(Seurat,DotPlot)
 importFrom(Seurat,Idents)
 importFrom(Seurat,RunTSNE)
+importFrom(Seurat,as.SingleCellExperiment)
 importFrom(colorspace,RGB)
 importFrom(colorspace,diverge_hcl)
 importFrom(colorspace,heat_hcl)
 importFrom(colorspace,hex)
 importFrom(dendextend,rotate)
 importFrom(dendsort,dendsort)
-importFrom(digest,digest)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
@@ -88,6 +87,9 @@ importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(ggplot2,ylim)
+importFrom(ggpubr,annotate_figure)
+importFrom(ggpubr,get_legend)
+importFrom(ggpubr,ggarrange)
 importFrom(grDevices,colorRampPalette)
 importFrom(grid,grid.draw)
 importFrom(gridExtra,arrangeGrob)
@@ -97,6 +99,7 @@ importFrom(plotly,as_widget)
 importFrom(plotly,ggplotly)
 importFrom(plotly,plot_ly)
 importFrom(reshape2,melt)
+importFrom(scDblFinder,scDblFinder)
 importFrom(scales,rescale)
 importFrom(stats,as.hclust)
 importFrom(stats,hclust)
@@ -104,8 +107,8 @@ importFrom(stats,kmeans)
 importFrom(stats,quantile)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sort)
+importFrom(stringr,str_to_title)
 importFrom(stringr,str_wrap)
-importFrom(svglite,svglite)
 importFrom(tibble,deframe)
 importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
