Adding auto-generated files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,6 @@ export(violinPlot)
 import(MAST)
 import(RColorBrewer)
 import(Seurat)
-import(SingleR)
 import(celldex)
 import(colorspace)
 import(cowplot)
@@ -40,7 +39,6 @@ import(gridExtra)
 import(harmony)
 import(httr)
 import(jsonlite)
-import(magrittr)
 import(parallel)
 import(quantmod)
 import(reshape2)
@@ -57,6 +55,7 @@ importFrom(Seurat,DotPlot)
 importFrom(Seurat,Idents)
 importFrom(Seurat,RunTSNE)
 importFrom(Seurat,as.SingleCellExperiment)
+importFrom(SingleR,SingleR)
 importFrom(colorspace,RGB)
 importFrom(colorspace,diverge_hcl)
 importFrom(colorspace,heat_hcl)
