--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,geom_hline)
@@ -111,4 +112,5 @@ importFrom(stringr,str_wrap)
 importFrom(tibble,deframe)
 importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
+importFrom(tidyr,fill)
 importFrom(tidyr,pivot_wider)
