--- a/Conda_Recipe/meta.yaml
+++ b/Conda_Recipe/meta.yaml
@@ -88,7 +88,7 @@ requirements:
     - r-viridislite >=0.4.0
     - r-xfun >=0.32
     - r-zip >=2.2.0
-
+    - r-harmony >=1.1.0
   run:
     - r-base ==4.1.3
     - r-biocmanager
@@ -143,7 +143,7 @@ requirements:
     - r-viridislite >=0.4.0
     - r-xfun >=0.32
     - r-zip >=2.2.0
-
+    - r-harmony >=1.1.0
 test:
   commands:
     # You can put additional test commands to be run here.
