--- a/Conda_Recipe/meta.yaml
+++ b/Conda_Recipe/meta.yaml
@@ -37,6 +37,7 @@ requirements:
   host:
     - r-base ==4.1.3
     - r-biocmanager
+    - r-gdata=r41hc72bb7e_0==2.19.0
     - bioconductor-complexheatmap >=2.10.0
     - bioconductor-mast >=1.20.0
     - r-rcolorbrewer >=1.1_3
@@ -80,6 +81,7 @@ requirements:
     - r-reticulate >=1.25
     - r-rlang >=1.0.6
     - r-scales
+    - bioconductor-scdblfinder
     - r-statmod >=1.4.37
     - r-stringr >=1.4.1
     - r-svglite >=2.1.0
@@ -89,11 +91,15 @@ requirements:
     - r-xfun >=0.32
     - r-zip >=2.2.0
     - r-harmony >=1.1.0
+    - bioconductor-celldex=r41hdfd78af_1==1.4.0
   run:
     - r-base ==4.1.3
     - r-biocmanager
+    - r-gdata
     - bioconductor-complexheatmap >=2.10.0
     - bioconductor-mast >=1.20.0
+    - bioconductor-scdblfinder
+    - bioconductor-celldex=r41hdfd78af_1==1.4.0
     - r-rcolorbrewer >=1.1_3
     - r-seurat >=4.1.1
     - bioconductor-singler >=1.8.1
