--- a/.github/workflows/gitflow-R-action.yml
+++ b/.github/workflows/gitflow-R-action.yml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} now ${{ github.event_name }} to ${{ github.ref_nam
 
 on:
   push:
-    branches: ['*', '!dev', '!main', '!release_dev', '!Conda_Package', '!github_page']
+    branches: ['*', '!dev']
     
   pull_request:
     types: ['opened', 'closed']
@@ -11,13 +11,6 @@ on:
 
 jobs:
   Activating_Parser:
-    uses: fnlcr-bids-sdsi/gitflow-R/.github/workflows/parser.yml@master
+    uses: fnlcr-bids-sdsi/gitflow-R/.github/workflows/parser.yml@SCWorkflow
     with:
-      image_to_use: ghcr.io/ruiheesi/scworkflow_cd:latest
-      package_name: "r-scworkflow-test"
-      r_version: "4.1.3"
-      artifact_rid_production: "ri.artifacts.main.repository.20ce29a2-3803-4eae-b325-8fe367d47d1e"
-      artifact_rid_development: "ri.artifacts.main.repository.99a97542-6794-4913-9281-02819ce47884"
-    secrets:
-      NIDAP_TOKEN_PRODUCTION: ${{ secrets.NIDAP_TOKEN_PRODUCTION }}
-      NIDAP_TOKEN_DEVELOPMENT: ${{ secrets.NIDAP_TOKEN_DEVELOPMENT }}
+      image_to_use: "ghcr.io/nidap-community/single-cell-rna-r4:v1.0"
