--- a/.github/workflows/gitflow-R-action.yml
+++ b/.github/workflows/gitflow-R-action.yml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} now ${{ github.event_name }} to ${{ github.ref_nam
 
 on:
   push:
-    branches: ['*', '!dev']
+    branches: ['*', '!dev', '!main', '!release_dev', '!Conda_Package', '!github_page']
     
   pull_request:
     types: ['opened', 'closed']
@@ -11,6 +11,13 @@ on:
 
 jobs:
   Activating_Parser:
-    uses: fnlcr-bids-sdsi/gitflow-R/.github/workflows/parser.yml@SCWorkflow
+    uses: fnlcr-bids-sdsi/gitflow-R/.github/workflows/parser.yml@master
     with:
-      image_to_use: "ghcr.io/nidap-community/single-cell-rna-r4:v1.0"
+      image_to_use: ghcr.io/nidap-community/single-cell-rna-r4:latest
+      package_name: "r-scworkflow-test"
+      r_version: "4.1.3"
+      artifact_rid_production: "ri.artifacts.main.repository.f36ea39e-b396-46cd-a04a-3c63250273f5"
+      artifact_rid_development: "ri.stemma.main.repository.2172e505-c98f-43d4-881a-47e170aadbe1"
+    secrets:
+      NIDAP_TOKEN_PRODUCTION: ${{ secrets.NIDAP_TOKEN_PRODUCTION }}
+      NIDAP_TOKEN_DEVELOPMENT: ${{ secrets.NIDAP_TOKEN_DEVELOPMENT }}
