--- a/.github/workflows/gitflow-R-action.yml
+++ b/.github/workflows/gitflow-R-action.yml
@@ -14,7 +14,7 @@ jobs:
     uses: fnlcr-bids-sdsi/gitflow-R/.github/workflows/parser.yml@master
     with:
       image_to_use: ghcr.io/nidap-community/single-cell-rna-r4:latest
-      package_name: "r-scworkflow-test"
+      package_name: "r-scworkflow"
       r_version: "4.1.3"
       artifact_rid_production: "ri.artifacts.main.repository.f36ea39e-b396-46cd-a04a-3c63250273f5"
       artifact_rid_development: "ri.stemma.main.repository.2172e505-c98f-43d4-881a-47e170aadbe1"
