rename and update Testdata for CN

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ import(cowplot)
 import(data.table)
 import(dplyr)
 import(gdata)
+import(ggExtra)
 import(ggplot2)
 import(ggpubr)
 import(ggrepel)
@@ -49,6 +50,7 @@ import(tools)
 import(utils)
 importFrom(ComplexHeatmap,pheatmap)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(RColorBrewer,brewer.pal.info)
 importFrom(Seurat,AddMetaData)
 importFrom(Seurat,CreateAssayObject)
 importFrom(Seurat,DotPlot)
