update Tests to match updated R scripts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,10 +68,14 @@ importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
+importFrom(dplyr,desc)
 importFrom(dplyr,filter)
+importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
+importFrom(dplyr,relocate)
+importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(ggplot2,aes)
