docs: Adding auto-generated files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,7 @@ export(processRawData)
 export(reclusterFilteredSeuratObject)
 export(reclusterSeuratObject)
 export(tSNE3D)
-export(violinPlot)
+export(violinPlot_mod)
 import(MAST)
 import(RColorBrewer)
 import(Seurat)
